templates/argocd-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd  # Make sure this matches the namespace where Argo CD is deployed
spec:
  selector:
    istio: ingressgateway  # Use the default Istio ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - argocd.devopswithme.com 

          #- port:
          #number: 443
          #name: https
          #protocol: HTTPS
          #hosts:
          #- argocd.devopswithme.com
